--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    
     "start": "nodemon index.js"
   },
   "author": "hrishabh",
@@ -16,7 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20"
-    
+    "nodemon": "^2.0.20",
+    "stripe": "^12.2.0"
   }
 }
